# TDD-dio

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
schemas/: base.py  product.py
store/core/: routers.py
store/schemas/: base.py  product.py
tests/schemas/: conftest.py  product.py  test_product.py
