[tool.poetry]
name = "tdd project"
version = "0.01"
description = ""
authors = ["Dev Wilk <programadorwilk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
pydantic = "2.5.1"
pydantic-settings = "2.3.4"
motor = "3.5.1"
pytest = "^8.2.2"
pytest-asyncio = "0.23.7"
pre-commit = "3.7.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
